assets/css/styles.css
/* ... */
.footer__subtitle {
    font-size: var(--normal-font-size);
    padding: 1rem;
}

.footer__links {
    font-size: var(--small-font-size);
    display: grid;
    grid-template-columns: repeat(3, 0.2fr);
    grid-template-rows: repeat(3, 2fr);
    row-gap: 1.5rem;
    margin-top: 1rem;
    width: 100%;
    padding: 1rem;
}

.footer__link:hover {
    color: var(--first-color-lighter);
}

.footer__socials {
    display: grid;
    grid-template-columns: repeat(3, 0.1fr);
    grid-template-rows: repeat(2, 1fr);
    row-gap: 0.5rem;
    margin-top: -2rem;
    padding: 1rem;
}

.footer__social {
    font-size: 1.25rem;
    margin-right: var(--mb-1-5);
}

.footer__social:hover {
    color: var(--first-color-lighter);
}

.footer__copy {
    font-size: var(--smaller-font-size);
    text-align: center;
    color: var(--text-color-light);
    margin-top: var(--mb-3);
}

.footer__title,
.footer__subtitle,
.footer__link,
.footer__social {
    color: #FFF;
}

/*========== SCROLL UP ==========*/
.scrollup {
    position: fixed;
    right: 1rem;
    bottom: 5rem;
    background-color: var(--first-color);
    color: white;
    opacity: .8;
    padding: 0 .3rem;
    border-radius: .4rem;
    z-index: var(--z-tooltip);
    transition: .4s;
}

.scrollup:hover {
    background-color: var(--first-color-alt);
}

.scrollup__icon {
    font-size: 1.5rem;
    color: #FFF;
}

/* Show scroll */
.show-scroll {
    bottom: 5rem;
}

/*========== SCROLL BAR ==========*/
::-webkit-scrollbar {
    width: .60rem;
    background-color: var(--scroll-bar-color);
    border-radius: .5rem;
}

::-webkit-scrollbar-thumb {
    background-color: var(--scroll-thumb-color);
    border-radius: .5rem;
}

/*==================== MEDIA QUERIES ====================*/
/* For small devices */
@media screen and (max-width: 350px) {
    .container {
        margin-left: var(--mb-1);
        margin-right: var(--mb-1);
    }

    .nav__menu {
        padding: 2rem .25rem 4rem;
    }

    .nav__list {
        column-gap: 0;
    }

    .home__content {
        grid-template-columns: .25fr 3fr;

    }

    .home__blob {
        width: 180px;
    }

    .skills__title {
        font-size: var(--normal-font-size);
    }

    .qualification__data {
        gap: .5rem;
    }

    .services__container {
        grid-template-columns: max-content;
        justify-content: center;
    }

    .services__content {
        padding-right: 3.5rem;
    }

    .services__modal {
        padding: 0 .5rem;
    }

    .project__img {
        width: 200px;
    }

    /*============= This is not implemented now ===============*/
    /*.testimonial__data,*/
    /*.testimonial__header{*/
    /*    flex-direction: column;*/
    /*    align-items: center;*/
    /*}*/

    /*.testimonial__img{*/
    /*    margin-right: 0;*/
    /*    margin-bottom: var(--mb-0-25);*/
    /*}*/

    /*.testimonial__data,*/
    /*.testimonial__description{*/
    /*    text-align: center;*/
    /*}*/

}

/* For medium devices */
@media screen and (min-width: 568px) {
    .home__content {
        grid-template-columns: max-content 1fr 1fr;
    }

    .home__data {
        grid-column: initial;
    }

    .home__img {
        order: 1;
        justify-self: center;
    }

    .about__container,
    .portfolio__content,
    .project__container,
    .footer__container {
        /* grid-template-columns: repeat(2, 1fr); */
        grid-template-columns: repeat(1, 1fr);
    }

    .qualification__sections {
        display: grid;
        grid-template-columns: .6fr;
        justify-content: center;
    }


}
/* ... */

